charts/all/neuroface-gateway/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neuroface-gateway-system
  labels:
    istio.io/dataplane-mode: none
  annotations:
    argocd.argoproj.io/sync-wave: "0"
    argocd.argoproj.io/sync-options: ServerSideApply=true
    sidecar.istio.io/inject: "true"
