charts/all/neuroface-gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neuroface-gateway-istio
  namespace: neuroface-gateway-system
  labels:
    gateway.networking.k8s.io/gateway-name: neuroface-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: ClusterIP
  selector:
    gateway.networking.k8s.io/gateway-name: neuroface-gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
