charts/all/neuroface-gateway/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: neuroface-gateway
  namespace: neuroface-gateway-system
  labels:
    backstage.io/kubernetes-id: neuroface-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    networking.istio.io/service-type: ClusterIP
spec:
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: neuroface-gateway-infrastructure
  gatewayClassName: istio
  listeners:
    - name: http
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
